# go-plugin

./: client.go  grpc_stdio.go
examples/grpc/: README.md  main.go
examples/grpc/plugin-go-grpc/: main.go
examples/grpc/plugin-rust/: .gitignore  Cargo.toml  README.md  build.rs
examples/grpc/plugin-rust/src/: client.rs  kv.rs  main.rs  server.rs  stdio.rs  store.rs
examples/grpc/plugin-rust/src/proto/: google.protobuf.rs  mod.rs  plugin.rs  proto.rs
