[package]
name = "kv-rust-grpc"
version = "0.1.0"
authors = ["DerekStrickland <1111455+DerekStrickland@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.2"
futures-core = "0.3"
futures-task = "0.3"
futures-util = {version = "0.3", features = ["io", "sink"]}
gag = "1.0.0"
log = "0.4.14"
prost = "0.8.0"
prost-types = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.6.9", features = ["io"]}
tonic = "0.5.2"
tonic-health = "0.4.1"
uuid = { version = "0.8.2", features = ["v4"]}

[build-dependencies]
prost = "0.8.0"
prost-build = "0.8.0"
tonic-build = "0.5.2"
prost-types = "0.8.0"

[patch.crates-io]
# tonic-build = { git = 'https://github.com/hyperium/tonic' }
prost = { git = "https://github.com/tokio-rs/prost" }
#prost-build = { git = "https://github.com/tokio-rs/prost" }
prost-build = { path = "../../../../prost/prost-build" }
tonic-build = { path = '../../../../tonic/tonic-build' }

# server binary
[[bin]]
name = "kv-rust-plugin"
path = "src/server.rs"

# client binary
[[bin]]
name = "kv-rust-client"
path = "src/client.rs"

